# career-navigator-backend

./: .gitignore  README.md  README_DOCKER.md  cleanup_user_17.sql  create_test_user.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 052495d15c36_add_authentication_fields_to_users_table.py  2347e1d3fbd6_add_cv_email_field_to_user_profiles.py  246291cbef07_add_draft_status_and_hobbies_to_user_.py  8d164a56892d_add_career_goal_type_and_job_search_.py  add_roadmap_tasks_table.py  ef4360335a1b_fix_enum_column_definitions.py  fb0b11a1d141_initial_migration_create_users_profiles_.py
assets/logo/: README.md
career_navigator/: config.py  main.py
career_navigator/api/: academics.py  auth.py  career.py  courses.py  health.py  job_experiences.py  products.py  profiles.py  roadmap.py  users.py  workflow.py
career_navigator/api/schemas/: __init__.py  academic.py  auth.py  career.py  course.py  job_experience.py  product.py  profile.py  roadmap.py  user.py
career_navigator/application/: career_planning_service.py  career_service.py  cv_generation_service.py  guardrails_middleware.py  health_service.py  parsing_service.py  validation_service.py  workflow_agent.py  workflow_graph.py  workflow_service.py
career_navigator/domain/: llm.py
career_navigator/domain/models/: academic.py  career_goal_type.py  course.py  job_experience.py  product.py  product_type.py  profile.py  roadmap_task.py  user.py  user_group.py
career_navigator/domain/prompts/: __init__.py  career_path.py  career_plans.py  cv_generation.py  cv_parsing.py  guardrail.py  linkedin_export.py
career_navigator/domain/repositories/: __init__.py  academic_repository.py  course_repository.py  job_experience_repository.py  product_repository.py  profile_repository.py  roadmap_task_repository.py  user_repository.py
career_navigator/domain/services/: auth_service.py
career_navigator/infrastructure/: document_parser.py  linkedin_api.py
career_navigator/infrastructure/database/: models.py  session.py
docs/: CAREER_PLANNING.md  DATABASE_SCHEMA.md  LINKEDIN_API_SETUP.md  MIDDLEWARE_INTEGRATION.md  README.md  TESTING_CV_PARSING.md  WORKFLOW.md
scripts/: generate_logo.py  seed_db.py  test_cv_parsing.py
(+9 files in other folders)
