[tool.poetry]
name = "career-navigator-backend"
version = "0.1.0"
description = "Backend for Career Navigator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langgraph = "^1.0.2"
langfuse = "^3.9.1"
langchain-openai = "^1.0.2"
python-dotenv = "^1.0.1"
langchain-groq = "^1.0.0"
pydantic-settings = "^2.2.1"
langchain-core = "^1.0.4"
langchain = "^1.0.5"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.0.0"
requests = "^2.31.0"
pypdf = "^4.0.0"
python-docx = "^1.1.0"
pdfplumber = "^0.11.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
authlib = "^1.6.5"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
